# django-google-optimize

./: .coveragerc  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tox.ini
.github/workflows/: deploy.yml  docker-build.yml  lint.yml  release.yml  test.yml  tox_lint.yml  tox_test.yml
django_google_optimize/: __init__.py  admin.py  apps.py  context_processors.py  middleware.py  models.py  utils.py
django_google_optimize/migrations/: 0001_initial.py  0002_auto_20200128_0658.py  0002_auto_20200128_1546.py  0002_experimentcookie.py  0003_auto_20200128_0706.py  0003_auto_20200129_0644.py  0004_auto_20200128_0715.py  0004_auto_20200129_0645.py  0005_auto_20200128_0717.py  0006_auto_20200128_0732.py  0007_auto_20200128_0736.py  0008_auto_20200128_0744.py  0009_auto_20200128_0745.py  0010_auto_20200128_0746.py  0011_auto_20200128_0749.py
docs/: conf.py  configuration.md  getting_started.rst  index.md  index.rst  installation.md  usage.md
google_optimize/: __init__.py  context_processors.py  pytest.ini  test_google_optimize.py  utils.py
google_optimize/templatetags/: google_optimize.py
google_optimize/tests/: test_utils.py
requirements/: dev.txt
tests/: settings.py  test_context_processors.py  test_helpers.py  test_middleware.py  test_utils.py  urls.py  views.py
tests/templates/context_processors/: test.html
