[tool.poetry]
name = "django-google-optimize"
version = "0.1.3"
description = ""
authors = ["Adin Hodovic <hodovicadin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pylint = "^2.4.4"
pylint-django = "^2.0.13"

[tool.poetry.dev-dependencies]
tox = "^3.14.3"
coverage = "^5.0.2"
django = ">=2.1"
twine = "^3.1.1"
wheel = "^0.33.6"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
pytest-django = "^3.7.0"
pytest-clarity = "^0.2.0-alpha.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
