[tool.poetry]
name = "django-google-optimize"
authors = ["Adin Hodovic <hodovicadin@gmail.com>"]
license = "MIT"
version = "0.2.2"
readme = "README.md"
homepage = "https://github.com/adinhodovic/django-google-optimize"
repository = "https://github.com/adinhodovic/django-google-optimize"
documentation = "https://github.com/adinhodovic/django-google-optimize"
description = "Django-google-optimize is a reusable Django application designed to make running server side Google Optimize A/B test easy."
keywords = [
  "A/B Testing",
  "Google Optimize",
  "Django",
  "Server Side",
  "KPI"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 2.2",
  "Framework :: Django :: 3.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
tox = "^3.14.3"
coverage = "^5.0.2"
django = ">=2.1"
twine = "^3.1.1"
wheel = "^0.33.6"
pylint = "^2.4.4"
pylint-django = "^2.0.13"
factory-boy = "^2.12.0"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
pytest-django = "^3.7.0"
pytest-clarity = "^0.2.0-alpha.1"
black = "^19.10b0"
mypy = "^0.761"
django-stubs = "^1.4.0"
pudb = "^2019.2"
ptpython = "^3.0.1"
ptipython = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
