[metadata]
name = django-google-optimize
version = attr: google_optimize.__version__
description =  Django-google-optimize is a reusable Django application for retrieving the current experiment variant.
long_description = file: README.rst
author = Alex Gaynor
author_email = alex.gaynor@gmail.com
url = https://github.com/adinhodovic/django-google-optimize
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
project_urls =
    Documentation = https://github.com/adinhodovic/django-google-optimize
    Source = https://github.com/adinhodovic/django-google-optimize
    Tracker = https://github.com/adinhodovic/django-google-optimize/issues

[options]
packages = find:
include_package_data = true

[options.packages.find]
exclude = tests*

[tool:pytest]
addopts = --ds=tests.settings --reuse-db -ra
testpaths = tests
