[metadata]
name = django-google-optimize
version = attr: google_optimize.__version__
description =  Django-google-optimize is a reusable Django application for retrieving the current experiment variant.
long_description = file: README.rst
author = Adin Hodovic
author_email = hodovicadin@gmail.com
url = https://github.com/adinhodovic/django-google-optimize
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
project_urls =
    Documentation = https://github.com/adinhodovic/django-google-optimize
    Source = https://github.com/adinhodovic/django-google-optimize
    Tracker = https://github.com/adinhodovic/django-google-optimize/issues

[options]
packages = find:
include_package_data = true

[options.packages.find]
exclude = tests*

[tool:pytest]
addopts = --ds=tests.settings --reuse-db -ra
DJANGO_SETTINGS_MODULE = tests.settings
testpaths = tests

[tool:isort]
recursive=True
skip=venv
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
forced_separate=tests, google_optimize
line_length=88
